# mozitahub_bot-rs

./: .travis.yml  Cargo.toml  README.md
assets/: frasi.json
src/: lib.rs  main.rs
